# rust_fullstack_example

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2021-06-04-092721_create_users/: up.sql
migrations/2021-06-04-093201_create_posts/: up.sql
migrations/2021-06-04-155229_drop_date/: down.sql  up.sql
migrations/2021-06-04-155519_add_precise_date/: down.sql  up.sql
migrations/2021-06-04-170946_make_date_nonnull/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: index.html.tera  new_user.html.tera  user.html.tera  user_not_found.html.tera  users.html.tera
