[package]
name = "rust_fullstack_example"
version = "0.1.0"
authors = ["andcov <andreicovaci123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
serde = { version = "1.0.117", features = ["derive"] }
country-emoji = "0.1.2"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_mysql_pool", "tera_templates"]
